--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,19 +5,19 @@
   tasks:
     - name: Check whether ChromeDriver is installed
       ansible.builtin.command: chromedriver --version
-      register: CHROMEDRIVER_INSTALLED
+      register: chromedriver_installed
       changed_when: false
       ignore_errors: True
 
     - name: Check OS version
       ansible.builtin.command: cat /etc/redhat-release
-      register: OS_VERSION
+      register: os_version
       changed_when: false
 
     - name: Make sure ChromeDriver is installed
       ansible.builtin.debug:
-        var: CHROMEDRIVER_INSTALLED
+        var: chromedriver_installed
 
     - name: Show OS version
       ansible.builtin.debug:
-        var: OS_VERSION
+        var: os_version
