Ansible-lintのCIをGitHub ActionsからCircleCIへ変更した refs #2432

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,7 +6,7 @@ driver:
 platforms:
   - name: instance
     image: ${MOLECULE_IMAGE}
-    pre_build_image: True
+    pre_build_image: true
 provisioner:
   name: ansible
   config_options:
