--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 dependencies: []
 galaxy_info:
   author: mamono210
-  company:
+  company: no name
   description: Google ChromeDriver installation for Linux.
   galaxy_tags: []
   license: "license (BSD, MIT)"
