Ansible lint で 「no-changed-when」のエラーに対応した refs #3619

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,6 +24,8 @@
   ansible.builtin.shell: |
     echo $(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
   register: driver_version
+  changed_when: false
+  failed_when: driver_version.stdout | length == 0
   when: chromedriver_installed is failed
 
 - name: Install ChromeDriver
